Clean up some warnings in tests Add test cases for ExceptionsTest and AbstractParserTest